<resources>
    <string name="app_name">Wallpapers\nPlus</string>
    <string name="appodeal_app_key" translatable="false">a4d5a86d98bcc84158724ae500fa3f79ce1eb8a08713b906</string>
    <string name="owner_id" translatable="false">-216602425</string>
    <string name="access_token" translatable="false">894af8d1894af8d1894af8d1448a5aa6d48894a894af8d1ebb782e0bf31982b2e98cd90</string>
    <string name="album_id_dusk" translatable="false">287488043</string>
    <string name="album_id_fog" translatable="false">287488038</string>
    <string name="album_id_art" translatable="false">287488030</string>
    <string name="album_id_loneliness" translatable="false">287488028</string>
    <string name="album_id_human" translatable="false">287487991</string>
    <string name="album_id_hand" translatable="false">287487981</string>
    <string name="album_id_black_and_white" translatable="false">287487971</string>
    <string name="album_id_retro" translatable="false">287487967</string>
    <string name="album_id_words" translatable="false">287487905</string>
    <string name="album_id_3d" translatable="false">287487900</string>
    <string name="album_id_music" translatable="false">287487896</string>
    <string name="album_id_couple" translatable="false">287487890</string>
    <string name="album_id_fantasy" translatable="false">287487774</string>
    <string name="album_id_animals" translatable="false">287487711</string>
    <string name="album_id_funny" translatable="false">287487694</string>
    <string name="album_id_black" translatable="false">287487629</string>
    <string name="album_id_trending_movies" translatable="false">287487583</string>
    <string name="album_id_flowers" translatable="false">287487556</string>
    <string name="album_id_motivation" translatable="false">287487484</string>
    <string name="album_id_sport" translatable="false">287487454</string>
    <string name="album_id_fields" translatable="false">287487428</string>
    <string name="album_id_autumn" translatable="false">287487409</string>
    <string name="album_id_night" translatable="false">287487368</string>
    <string name="album_id_water" translatable="false">287487324</string>
    <string name="album_id_snow" translatable="false">287487258</string>
    <string name="album_id_sky" translatable="false">287487196</string>
    <string name="album_id_cities" translatable="false">287487127</string>
    <string name="album_id_sunset" translatable="false">287487068</string>
    <string name="album_id_mountains" translatable="false">287487026</string>
    <string name="album_id_nature" translatable="false">287486975</string>
    <string name="album_id_anime" translatable="false">287486911</string>
    <string name="album_id_abstractions" translatable="false">287486813</string>
    <string name="album_id_games" translatable="false">287486344</string>

    <string name="version" translatable="false">5.131</string>
    <string name="category_dusk" >Dusk</string>
    <string name="category_fog" >Fog</string>
    <string name="category_art" >Art</string>
    <string name="category_Loneliness" >Loneliness</string>
    <string name="category_Human" >Human</string>
    <string name="category_Hand" >Hand</string>
    <string name="category_black_and_white" >Black and white</string>
    <string name="category_Retro" >Retro</string>
    <string name="category_Words" >Words</string>
    <string name="category_3D" >3D</string>
    <string name="category_Music" >Music</string>
    <string name="category_black" >Black</string>
    <string name="category_Couple" >Couple</string>
    <string name="category_Fantasy" >Fantasy</string>
    <string name="category_Animals" >Animals</string>
    <string name="category_Funny" >Funny</string>
    <string name="category_tending_movies" >Trending movies</string>
    <string name="category_Flowers" >Flowers</string>
    <string name="category_Motivation" >Motivation</string>
    <string name="category_Sport" >Sport</string>
    <string name="category_Fields" >Fields</string>
    <string name="category_Autumn" >Autumn</string>
    <string name="category_Night" >Night</string>
    <string name="category_Water" >Water</string>
    <string name="category_Snow" >Snow</string>
    <string name="category_Sky" >Sky</string>
    <string name="category_Cities" >Cities</string>
    <string name="category_Sunset" >Sunset</string>
    <string name="category_Mountains" >Mountains</string>
    <string name="category_Nature" >Nature</string>
    <string name="category_Anime" >Anime</string>
    <string name="category_Abstractions" >Abstractions</string>
    <string name="category_Games" >Games</string>


    <string name="hello_blank_fragment" translatable="false">3D</string>
    <string name="favourites" translatable="false">3D</string>
    <string name="tt_request_permission_descript_external_storage" translatable="false">3D</string>
    <string name="tt_request_permission_descript_location" translatable="false">3D</string>
    <string name="tt_request_permission_descript_read_phone_state" translatable="false">3D</string>
    <string name="category_NEWEST">New</string>
    <string name="category_AMOLED">AMOLED</string>
    <string name="category_DOUBLE">DOUBLE Wallpaper</string>
    <string name="category_ABSTRACTION">Abstraction</string>
    <string name="category_AUTO">Cars</string>
    <string name="category_ANIME">Anime</string>
    <string name="category_ARMY">Army / Equipment</string>
    <string name="category_ART">ART</string>
    <string name="category_ARCHITECTURE">Architecture</string>
    <string name="category_FOOD">Meal</string>
    <string name="category_ANIMALS">Animals</string>
    <string name="category_ZNAKI">Signs / Inscriptions</string>
    <string name="category_GAMES">Games</string>
    <string name="category_SPACE">Space</string>
    <string name="category_PIPL">People</string>
    <string name="category_MACRO">Macro</string>
    <string name="category_MINIMALISM">Minimalism</string>
    <string name="category_MOTO">Motorcycles</string>
    <string name="category_MUSIC">Music</string>
    <string name="category_HOLIDAYS">Holidays</string>
    <string name="category_NATURE">Nature</string>
    <string name="category_SPORT">Sport</string>
    <string name="category_SUPERHIROS">Superheroes</string>
    <string name="category_TEXTURE">Textures</string>
    <string name="category_FILMS">Films</string>
    <string name="category_FANTASY">Fantasy</string>
    <string name="category_FLOWERS">Flowers</string>
    <string name="category_HI_TECH">Hi-Tech</string>
    <string name="category_OTHER">Various</string>
    <string name="categories">Categories</string>
    <string name="install">Install</string>
    <string name="save">Save</string>
    <string name="tvBlockScreen">Lock Screen</string>
    <string name="homeScreen">Home Screen</string>
    <string name="everywhere">Everywhere</string>
    <string name="downloading">Downloading...</string>
    <string name="downloadingInfo">After downloading, you will be shown 1 advertisement</string>
    <string name="installedandsaved">Saved and installed</string>
    <string name="saved">Saved to Gallery</string>
    <string name="share">To share</string>
    <string name="clearCookies">Clear Cache</string>
    <string name="language">Language</string>
    <string name="disableAds">Disable ads</string>
    <string name="rateApp">Estimate</string>
    <string name="activatePro">Activate the PRO version</string>
    <string name="month">1 month</string>
    <string name="always">Forever</string>
    <string name="subscriptionText">Disable ads.</string>
    <string name="once">One-time payment</string>
    <string name="getPro">Buy</string>
    <string name="selectScreen">Select a screen</string>
    <string name="apply">Apply</string>
    <string name="ok">Ok</string>
    <string name="no_internet">There is no internet connection</string>
    <string name="make_sure_connected">Make sure your device is connected to the Internet. Try using a mobile or Wi-Fi network.</string>
    <string name="try_vpn">If there is an Internet connection, but the application gives an error, then use a VPN</string>
    <string name="user_agreement">Privacy policy</string>
    <string name="share_text">Hi! I liked this app and decided to share it with you. https://play.google.com/store/apps/details?id=com.wallpaper.fullhd.p1080new2</string>
    <string name="cleanCache">Clear Cache</string>
    <string name="clear">Clear</string>
    <string name="wholeCache">the "Shared Cache -"</string>
<string name="user_agreement_url" translatable="false">https://disk.yandex.ru/i/lshFDaQf7LMqZg</string>
    <string name="cancel">Отмена</string>
    <string-array name="language">
        <item>Amharic,am</item>
        <item>Arabic,ar</item>
        <item>Bulgarian,bg</item>
        <item>Bengali,bn</item>
        <item>Сatalan,ca</item>
        <item>Czech</item>
        <item>Danish</item>
        <item>German</item>
        <item>Greek</item>
        <item>English,en</item>
        <item>Spanish</item>
        <item>Estonian</item>
        <item>Persian</item>
        <item>Finnish</item>
        <item>Filipino</item>
        <item>French</item>
        <item>Gujarati</item>
        <item>Hindi</item>
        <item>Croatian</item>
        <item>Hungarian</item>
        <item>Armenian</item>
        <item>Indonesian</item>
        <item>Icelandic</item>
        <item>Italian</item>
        <item>Hebrew</item>
        <item>Japanese</item>
        <item>Kannada,kn</item>
        <item>Korean</item>
        <item>Lithuanian</item>
        <item>Latvian</item>
        <item>Malayalam</item>
        <item>Marathi</item>
        <item>Malay</item>
        <item>Norwegian</item>
        <item>Punjabi</item>
        <item>Polish</item>
        <item>Portuguese</item>
        <item>Romanian</item>
        <item>Russian,ru</item>
        <item>Sinhalese</item>
        <item>Slovak</item>
        <item>Slovenian</item>
        <item>Serbian</item>
        <item>Swedish</item>
        <item>Swahili</item>
        <item>Tamil</item>
        <item>Telugu</item>
        <item>Thai</item>
        <item>Turkish</item>
        <item>Ukrainian</item>
        <item>Urdu</item>
        <item>Vietnamese</item>
        <item>Chinese</item>
    </string-array>
</resources>