<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    android:id="@+id/clFullScreen"
    tools:context=".ui.fragments.fullscreenwallpaper.view.FullScreenWallpaper">
    <com.github.ybq.android.spinkit.SpinKitView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/SpinKitView.Large.Wave"
        android:id="@+id/skvLoadingFullScreen"
        />
    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/ivFullScreenWallpaper"
        app:layout_constraintTop_toTopOf="parent"
        />
    <LinearLayout
        android:id="@+id/llInstall"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/transparent50background"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"
        android:weightSum="3"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/tvInstall"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="@string/install"
            />
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/tvFavourites"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="@string/favourites"
            android:visibility="invisible"
            android:src="@drawable/saved_icon"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:id="@+id/tvSave"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="@string/save"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.45"
        android:id="@+id/vCenter"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.01"
        app:layout_constraintBottom_toTopOf="@+id/llInstall"
        android:id="@+id/vBottom"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clSelectToInstall"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintBottom_toTopOf="@+id/vBottom"
        app:layout_constraintTop_toBottomOf="@+id/vCenter"
        android:background="@color/background"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectScreen"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.1"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:id="@+id/tvSelect"
            />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintTop_toBottomOf="@+id/tvSelect"
            app:layout_constraintBottom_toTopOf="@+id/mbtnApply">
            <View
                android:layout_marginTop="10dp"
                android:layout_width="0dp"
                android:layout_height="1dp"
                app:layout_constraintWidth_percent="0.7"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@color/lineColor"
                android:visibility="invisible"
                android:id="@+id/vTop"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vTop"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/homeScreen"
                android:id="@+id/tvHomeScreen"
                />
            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                app:layout_constraintWidth_percent="0.7"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@color/lineColor"
                android:visibility="invisible"
                app:layout_constraintTop_toBottomOf="@+id/tvHomeScreen"
                android:id="@+id/vHomeScreenBottom"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vHomeScreenBottom"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/tvBlockScreen"
                android:id="@+id/tvBlockScreen"
                />
            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                app:layout_constraintWidth_percent="0.7"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:visibility="invisible"
                android:background="@color/lineColor"
                app:layout_constraintTop_toBottomOf="@+id/tvBlockScreen"
                android:id="@+id/vHomeScreenBottomBottom"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vHomeScreenBottomBottom"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/everywhere"
                android:id="@+id/tvEveryWhere"
                />
            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                app:layout_constraintWidth_percent="0.7"
                app:layout_constraintStart_toStartOf="parent"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@color/lineColor"
                app:layout_constraintTop_toBottomOf="@+id/tvEveryWhere"
                android:id="@+id/vEveryWhere"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.9"
            app:backgroundTint="@color/buttonColor"
            android:text="@string/apply"
            android:textAllCaps="false"
            android:id="@+id/mbtnApply"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>