<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/probackground"
    tools:context=".ui.fragments.settings.removeads.RemoveAdsFragment">
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1"
        android:id="@+id/glTop"
        />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25"
        android:id="@+id/glSubscriptions"
        />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45"
        android:id="@+id/glYearSubs"
        />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65"
        android:id="@+id/glTopSubsText"
        />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15"
        android:id="@+id/glStartMonth"
        />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.55"
        android:id="@+id/glStartEnd"
        />
    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="10dp"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"
        app:layout_constraintWidth_percent="0.1"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintHorizontal_bias="0.05"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:visibility="gone"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="@+id/ivBack"
        app:layout_constraintBottom_toBottomOf="@+id/ivBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/glTop"
        android:text="@string/activatePro"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textAlignment="center"
        />
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcvMonth"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:strokeColor="@color/white"
        app:strokeWidth="1dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintHeight_percent="0.15"
        app:cardBackgroundColor="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@+id/glSubscriptions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
            android:id="@+id/tvMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/mcvMonthText"
            />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/mcvMonthText"
                app:layout_constraintHeight_percent="0.3"
                app:cardCornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/month"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    />
            </com.google.android.material.card.MaterialCardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcvAlways"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintHeight_percent="0.15"
        app:cardBackgroundColor="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@+id/glYearSubs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:strokeWidth="1dp"
        app:cardCornerRadius="10dp"
        app:strokeColor="@color/white"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tvAlways"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/mcvAlwaysText"
                />
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/mcvAlwaysText"
                app:layout_constraintHeight_percent="0.3"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/always"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    />
            </com.google.android.material.card.MaterialCardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
    <TextView
        android:id="@+id/tvSubsText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/subscriptionText"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/glTopSubsText"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvSubsText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/once"
        android:textColor="@color/white"
        android:textSize="16sp"
        />
    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/tvSubsText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintHeight_percent="0.1"
        app:cornerRadius="10dp"
        app:backgroundTint="@color/proversionColor"
        android:text="@string/getPro"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        />
</androidx.constraintlayout.widget.ConstraintLayout>